--- a/index.html
+++ b/index.html
@@ -3,18 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fran Bow: A Jornada da Ultrarrealidade</title>
     <link rel="stylesheet" href="style.css">
-    <title>??????</title>
+    <!-- Adicione isto se quiser usar Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>A vida de Fran Bow</h1>
-        <div class="caixa-perguntas"></div>
-        <div class="caixa-alternativas"></div>
-        <div class="caixa-resultado">
-            <p class="texto-resultado"></p>
+        <!-- Cabeçalho com título -->
+        <div class="cabecalho">
+            <h1>Fran Bow: A Jornada da Ultrarrealidade</h1>
+            <p class="subtitulo">Suas escolhas moldam a realidade...</p>
+            <div class="barra-progresso">
+                <div class="progresso"></div>
+            </div>
+        </div>
+
+        <!-- Área de narrativa interativa -->
+        <div class="conteudo-jogo">
+            <!-- Caixa de perguntas -->
+            <div class="caixa-perguntas"></div>
+            
+            <!-- Caixa de alternativas -->
+            <div class="caixa-alternativas"></div>
+            
+            <!-- Caixa de resultado (inicialmente oculta) -->
+            <div class="caixa-resultado">
+                <h2></h2>
+                <p class="texto-resultado"></p>
+                <img src="" alt="Cena final" class="imagem-final">
+                <button class="botao-reiniciar">Reviver a Jornada</button>
+            </div>
+        </div>
+
+        <!-- Rodapé temático -->
+        <div class="rodape">
+            <p>Oswald Asylum - 1944</p>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
