--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
             </div>
         </div>
 
-        <!-- Área de narrativa interativa -->
-        <div class="conteudo-jogo">
+        <!-- Tela Inicial -->
+        <div class="tela-inicial">
+            <div class="introducao">
+                <p>Em um hospício sombrio, Fran descobre pílulas vermelhas que revelam uma realidade alternativa. Suas escolhas determinarão seu destino...</p>
+                <button class="botao-iniciar">Iniciar Jornada</button>
+            </div>
+        </div>
+
+        <!-- Área de narrativa interativa (inicialmente oculta) -->
+        <div class="conteudo-jogo" style="display: none;">
             <!-- Caixa de perguntas -->
             <div class="caixa-perguntas"></div>
             
@@ -31,7 +39,6 @@
             <div class="caixa-resultado">
                 <h2></h2>
                 <p class="texto-resultado"></p>
-                <img src="" alt="Cena final" class="imagem-final">
                 <button class="botao-reiniciar">Reviver a Jornada</button>
             </div>
         </div>
